Closed
Bug 323373
Opened 20 years ago
Closed 19 years ago
fails to import all SMTP servers from mozilla suite/netscape 7.2
Categories
(Thunderbird :: Migration, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: siftspam-dev, Assigned: standard8)
References
Details
(Keywords: fixed1.8.1.5, qawanted, verified1.8.0.13)
Attachments
(1 file)
|
1.17 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
dveditz
:
approval1.8.1.5+
dveditz
:
approval1.8.0.13+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8) Gecko/20051111 Firefox/1.5
Build Identifier: 1.5 (20051025)
I attempted to import my Netscape 7.2 profile into TB 1.5 (20051025). My NS 7.2 profile contains 10 e-mail accounts and 7 SMTP servers. After TB finished importing these accounts, I noticed that only the default SMTP server setting were migrated to the new TB profile.
I did some investigation and found, what appears to be, a problem in the prefs.js file. Specifically, the 'user_pref("mail.smtpservers", ...);' entry is not being set correctly.
I looked into the new prefs.js file (while the initial/migrating TB 1.5 process was still running). I was pleasantly surprised to see entries for each of the SMTP servers that were defined in my NS 7.2 profile (e.g. "mail.smtpserver.smtp7.hostname", etc.). However, there was *NO* entry for "mail.smtpservers" in the file! So, I shutdown the TB process and checked the prefs.js file again.
This time, I found a "mail.smtpservers" entry in the file, but the value assigned was an empty string:
user_pref("mail.smtpservers", "");
Next, I manually copied the "mail.smtpservers" entry from my NS 7.2 prefs.js file into the new TB prefs.js file, started a new TB process and rechecked the "Edit->Account_Settings". Indeed, I was able to see all seven of the SMTP servers that I had defined in my NS 7.2 profile.
In at least some cases, editing the new prefs.js file in this way may be an effective workaround until this problem can be resolved.
Reproducible: Always
Steps to Reproduce:
1. Move ~/.thunderbird to ~/.thunderbird.prev (or whatever)
2. Start TB, import a Netscape 7.2 profile containing multiple accounts with non-default SMTP servers defined for some of them.
3. Select Edit->Account_Settings menu item, after the import completes.
4. Click on "Outgoing Server (SMTP)" listbox entry.
5. Notice that only the default SMTP server appears in the listbox under the "Outgoing Server (SMTP) Settings" heading.
Actual Results:
Non-default SMTP servers are not imported correctly. Only the default SMTP server configuration is imported.
Expected Results:
All SMTP servers defined in the NS 7,2 profile should be fully imported into the TB profile.
Thunderbird version: 1.5 (20051025)
Linux distro: SUSE 9.3
Kernel: 2.6.11.4-21.10-smp
CPU: Mobile Intel(R) Pentium(R) 4 (Hyperthreading enabled)
| Reporter | ||
Updated•20 years ago
|
Version: unspecified → 1.5
| Reporter | ||
Comment 1•20 years ago
|
||
I just downloaded TB 1.5.0.2 (20060420), removed my old ~/.thunderbird directory and tried to import from the same NS 7.2 profile. The problem still exists in TB 1.5.0.2.
Comment 2•20 years ago
|
||
*** Bug 343366 has been marked as a duplicate of this bug. ***
Updated•20 years ago
|
OS: Linux → All
Hardware: PC → All
Summary: Migrating Netscape 7.2 e-mail accounts fails to import all SMTP servers → fails to import all SMTP servers from mozilla suite/netscape 7.2
Comment 3•19 years ago
|
||
(In reply to comment #1)
I can confirm the bug whith TB 1.5.0.8 importing a profile of seamonkey 1.0.5
| Assignee | ||
Comment 4•19 years ago
|
||
I just wrote the fix for this for SeaMonkey, so here it is for Thunderbird. Adds migration of the missed mail.smtpservers preference.
David, if you want this for branch, please set/request the appropriate flags - I don't generally build/test Thunderbird branch.
Assignee: mscott → bugzilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #266419 -
Flags: superreview?(bienvenu)
Attachment #266419 -
Flags: review?(bienvenu)
Comment 5•19 years ago
|
||
Comment on attachment 266419 [details] [diff] [review]
The fix
thx, Mark
Attachment #266419 -
Flags: superreview?(bienvenu)
Attachment #266419 -
Flags: superreview+
Attachment #266419 -
Flags: review?(bienvenu)
Attachment #266419 -
Flags: review+
| Assignee | ||
Comment 6•19 years ago
|
||
Patch checked in -> fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 7•19 years ago
|
||
Comment on attachment 266419 [details] [diff] [review]
The fix
This is something we'd like to take on the branch too.
Attachment #266419 -
Flags: approval1.8.1.5?
Comment 8•19 years ago
|
||
Comment on attachment 266419 [details] [diff] [review]
The fix
approved for 1.8.1.5 and 1.8.0.13, a=dveditz for release-drivers
(assuming you might as well take this in still-supported tb1.5.0.13)
Attachment #266419 -
Flags: approval1.8.1.5? → approval1.8.1.5+
Updated•19 years ago
|
Attachment #266419 -
Flags: approval1.8.0.13+
Updated•19 years ago
|
Keywords: fixed1.8.1.5
Comment 9•19 years ago
|
||
Fred and others that were seeing this issue: Could you please try again with the latest 1.8 (2.0.0.5pre) and/or Trunk nightly builds? Pleasse report back that things work now, so we can verify this fixed. Thanks!
Keywords: qawanted
| Reporter | ||
Comment 10•19 years ago
|
||
Migration went smoothly.
I downloaded and untarred thunderbird-2.0.0.5pre.en-US.linux-i686.tar.gz on openSUSE 10.2 (32-bit). The migration from my old NS 7.2 accounts and folders seemed to go as expected without any obvious errors. I was able to "Get Mail" for my accounts using the migrated POP settings and passwords, no other interaction was required. Nice. ;-)
Thanks for taking the time to fix this!
Comment 11•19 years ago
|
||
Please get this landed soon if you wish to make 1.8.0.13
Updated•19 years ago
|
Keywords: fixed1.8.0.13
I set up five SMTP servers (in addition to my regular @mozilla.com one), and all of their settings migrated/imported correctly from:
SeaMonkey 1.1.4:Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1.6) Gecko/20070802 SeaMonkey/1.1.4
into: version 1.5.0.13 (20070809) of Thunderbird; this was all on OS X 10.4.
Keywords: fixed1.8.0.13 → verified1.8.0.13
You need to log in
before you can comment on or make changes to this bug.
Description
•