Bug 323373 Thunderbird fails to import all SMTP servers from mozilla suite/netscape 7.2. r/sr=bienvenu